--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
             <li class="nav-item">
               <a class="nav-link mx-lg-4" href="#projects">Projects</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link mx-lg-4" href="#contact">Contact</a>
-            </li>
           </ul>
       </div>
     </div>
@@ -99,8 +96,8 @@
     <div class="f-montserrat-bold abt-giga-text r-0">About Me.</div>
       <div class="container">
         <div class="row">
-          <div class="col px-md-5 py-md-4 section-content">
-            <p class="f-montserrat text-justif f-20">I am a highly <span class="f-montserrat-bold c-teal">versatile</span> and <span class="f-montserrat-bold c-teal">
+          <div class="col px-md-5 pt-md-4 section-content">
+            <p class="f-montserrat text-justif f-20 mb-0">I am a highly <span class="f-montserrat-bold c-teal">versatile</span> and <span class="f-montserrat-bold c-teal">
               adaptable</span> professional with a strong <span class="f-montserrat-bold c-teal">problem-solving mindset</span>. My commitment to <span class="f-montserrat-bold c-teal">continuous learning</span> and application of <span class="f-montserrat-bold c-teal">industry's best practices</span> enables me to consistently <span class="f-montserrat-bold c-teal">deliver high-quality solutions</span>. 
               With my strong <span class="f-montserrat-bold c-teal">communication and collaboration skills</span>, I excel in both <span class="f-montserrat-bold c-teal">individual</span> and in <span class="f-montserrat-bold c-teal">team settings</span>, and I am dedicated to driving <span class="f-montserrat-bold c-teal">excellence in every project</span>.</p>
           </div>
@@ -194,7 +191,7 @@
           <p class="text-md-end f-montserrat-bold c-teal">2020 — 2022</p>
         </div>
         <div class="col-md-7">
-          <p class="f-montserrat mb-0"><span class="fw-medium">Software Engineer (Part-time)</span>, USAID | E-PESO · </p>
+          <p class="f-montserrat mb-0"><span class="fw-medium">Software Engineer (Freelance)</span>, USAID | E-PESO · </p>
           <p class="f-montserrat fw-lighter">Chemonics International, Inc.</p>
           <p class="f-montserrat xp-role mb-0">
             Converted Bureau of Internal Revenue’s (BIR) online payment portal API and front-end technical specifications into design specifications.
@@ -333,13 +330,125 @@
           <span class="badge rounded-pill bg-c-teal f-montserrat fw-light">MS SQL</span>
         </div>
       </div>
+      <a href="./assets/Resume2024_AisaLamdag.pdf" class="c-teal with-arrow f-montserrat-bold" target="_blank">
+        <span>View Full Résumé</span>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 20 20">
+          <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+        </svg>
+      </a>
     </div>
   </section>
-
+  <!-- PROJECTS -->
+  <section class="container-fluid bg-body-tertiary" id="projects">
+    <div class="container">
+      <h1 class="f-montserrat-bold py-md-5 py-4">Projects<a class="anchor-link fw-lighter" href="#about">#</a></h1>
+    </div>
+  </section>
+  <section class="container-fluid menu-content">
+    <div class="f-montserrat-bold prj-giga-text r-0">Projects.</div>
+      <div class="container">
+        <h6 class="f-montserrat mb-3">
+          Below are the projects and websites that I helped <span class="f-montserrat-bold c-teal">develop</span> or <span class="f-montserrat-bold c-teal">pioneer</span>. Click on the title of each project to access the website.
+        </h6>
+        <div class="row mb-md-3">
+          <div class="col-md-1 col-2 mb-md-0 mb-3">
+          </div>
+          <div class="col-md-3 col-8 mb-md-0 mb-3"> 
+            <img src="assets/proj_acn.jpg" alt="proj_acn" class="w-100"/>
+          </div>
+          <div class="col-md-7 col-12">
+            <a href="https://www.accenture.com/ph-en/industries/life-sciences" target="_blank" class="with-arrow c-teal mb-3 mt-2">
+              <span class="f-montserrat-bold">Accenture DotCom</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 20 20">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg>
+            </a>
+            <p class="f-montserrat">Utilized Sitecore CMS to build and manage the website's content infrastructure. Engineered and implemented dynamic content cards, enabling personalized and interactive user experiences.</p>
+          </div>
+        </div>
+        <div class="row mb-md-3">
+          <div class="col-md-1 col-2 mb-md-0 mb-3">
+          </div>
+          <div class="col-md-3 col-8 mb-md-0 mb-3"> 
+            <img src="assets/proj_invento.jpg" alt="proj_acn" class="w-100"/>
+          </div>
+          <div class="col-md-7 col-12">
+            <a href="https://m.gobooc.com/" target="_blank" class="with-arrow c-teal mb-3 mt-2">
+              <span class="f-montserrat-bold">Gobooc Mobile Website</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 20 20">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg>
+            </a>
+            <p class="f-montserrat">Contributed to the development of the mobile website, focusing on creating a responsive and user-friendly interface. Leveraged React JS to implement dynamic features and ensure seamless functionality across various devices.</p>
+          </div>
+        </div>
+        <div class="row mb-md-3">
+          <div class="col-md-1 col-2 mb-md-0 mb-3">
+          </div>
+          <div class="col-md-3 col-8 mb-md-0 mb-3"> 
+            <img src="assets/proj_lux.jpg" alt="proj_acn" class="w-100"/>
+          </div>
+          <div class="col-md-7 col-12">
+            <a href="https://www.luxclusif.com/" target="_blank" class="with-arrow c-teal mb-3 mt-2">
+              <span class="f-montserrat-bold">Luxclusif B2B E-commerce Website</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 20 20">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg>
+            </a>
+            <p class="f-montserrat">Led the backend and frontend development teams in creating a B2B e-commerce platform. Oversaw the integration of WordPress CMS to deliver a robust, scalable solution tailored for business transactions, ensuring optimal performance and user experience.</p>
+          </div>
+        </div>
+        <div class="row mb-md-3">
+          <div class="col-md-1 col-2 mb-md-0 mb-3">
+          </div>
+          <div class="col-md-3 col-8 mb-md-0 mb-3"> 
+            <img src="assets/proj_bir.png" alt="proj_acn" class="w-100"/>
+          </div>
+          <div class="col-md-7 col-12">
+            <a href="https://payment-portal-uat.birgovph.com/" target="_blank" class="with-arrow c-teal mb-3 mt-2">
+              <span class="f-montserrat-bold">BIR Payment Portal</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 20 20">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg>
+            </a>
+            <p class="f-montserrat">Contributed to the development of the payment portal by implementing various APIs using Go and designing the front-end application with Vue JS. Ensured seamless integration between the backend services and user interface to enhance the overall functionality and user experience of the portal.</p>
+          </div>
+        </div>
+        <div class="row mb-md-3">
+          <div class="col-md-1 col-2 mb-md-0 mb-3">
+          </div>
+          <div class="col-md-3 col-8 mb-md-0 mb-3"> 
+            <img src="assets/proj_lux.jpg" alt="proj_acn" class="w-100"/>
+          </div>
+          <div class="col-md-7 col-12">
+            <a href="https://sandbox-store.luxclusif.com/login" target="_blank" class="with-arrow c-teal mb-3 mt-2">
+              <span class="f-montserrat-bold">Luxclusif B2B E-commerce Website V2</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 20 20">
+                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+              </svg>
+            </a>
+            <p class="f-montserrat">Led the backend development team in upgrading the Luxclusif website to its second version. Spearheaded the integration of NopCommerce CMS for robust e-commerce functionality and collaborated on the development of the front-end application using .NET to enhance user interaction and overall site performance.</p>
+          </div>
+        </div>
+        <div class="row mb-md-3">
+          <div class="col-md-1 col-2 mb-md-0 mb-3">
+          </div>
+          <div class="col-md-3 col-8 mb-md-0 mb-3"> 
+            <img src="assets/proj_dof.jpg" alt="proj_acn" class="w-100"/>
+          </div>
+          <div class="col-md-7 col-12">
+            <p class="f-montserrat-bold c-teal mt-2">DOF Fiscal Incentive Registration and Monitoring Portal</p>
+            <p class="f-montserrat">Developed a diverse array of features for the website, with a primary focus on implementing robust CRUD (Create, Read, Update, Delete) operations. Utilized the Laravel framework to ensure efficient and secure handling of data and seamless user interactions.</p>
+          </div>
+        </div>
+      </div>
+  </section>
     
-  <!-- <footer class="container sticky-bottom">
-      <p>&copy; 2024 Aisa Lamdag - All right Reserved.</p>
-  </footer> -->
+  <div class="container-fluid bg-body-tertiary">
+    <footer class="container">
+        <p class="f-montserrat fw-light mb-0 py-3">&copy; 2024 Aisa Lamdag - All right Reserved.</p>
+    </footer>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
