--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
           <div class="col-md-1 col-2 mb-md-0 mb-3">
           </div>
           <div class="col-md-3 col-8 mb-md-0 mb-3"> 
-            <img src="assets/proj_lux.jpg" alt="proj_acn" class="w-100"/>
+            <img src="assets/proj_luxv2.jpg" alt="proj_acn" class="w-100"/>
           </div>
           <div class="col-md-7 col-12">
             <a href="https://sandbox-store.luxclusif.com/login" target="_blank" class="with-arrow c-teal mb-3 mt-2">
