--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
   <!-- PROJECTS -->
   <section class="container-fluid bg-body-tertiary" id="projects">
     <div class="container">
-      <h1 class="f-montserrat-bold py-md-5 py-4">Projects<a class="anchor-link fw-lighter" href="#about">#</a></h1>
+      <h1 class="f-montserrat-bold py-md-5 py-4">Projects<a class="anchor-link fw-lighter" href="#projects">#</a></h1>
     </div>
   </section>
   <section class="container-fluid menu-content">
