--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     </div>
   </section>
   <section class="container-fluid menu-content">
-    <div class="f-montserrat-bold prj-giga-text r-0">Projects.</div>
+    <div class="f-montserrat-bold prj-giga-text r-0">My Projects.</div>
       <div class="container">
         <h6 class="f-montserrat mb-3">
           Below are the projects and websites that I helped <span class="f-montserrat-bold c-teal">develop</span> or <span class="f-montserrat-bold c-teal">pioneer</span>. Click on the title of each project to access the website.
@@ -446,7 +446,7 @@
     
   <div class="container-fluid bg-body-tertiary">
     <footer class="container">
-        <p class="f-montserrat fw-light mb-0 py-3">&copy; 2024 Aisa Lamdag - All right Reserved.</p>
+        <p class="f-montserrat fw-light mb-0 py-3">&copy; 2024 Aisa Lamdag - All rights Reserved.</p>
     </footer>
   </div>
 
