--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Aisa Lamdag's professional profile and portfolio">
+  <meta name="keywords" content="GitHub, portfolio, software, developer, projects, Aisa Lamdag, open for work, cebu area, engineer, work, software engineer, professional">
+  <meta name="author" content="Aisa Lamdag">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Professional Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
