--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SDYSNXH0FF"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-SDYSNXH0FF');
+  </script>
   <meta charset="UTF-8">
-  <meta name="description" content="Aisa Lamdag's professional profile and portfolio">
-  <meta name="keywords" content="GitHub, portfolio, software, developer, projects, Aisa Lamdag, open for work, cebu area, engineer, work, software engineer, professional">
+  <meta name="description" property="og:description" content="Aisa Lamdag's professional profile and portfolio">
+  <meta property="og:url" content="https://aisalamdag23.github.io">
+  <meta name="keywords" content="GitHub, portfolio, software, developer, projects, Aisa Lamdag, open for work, cebu area, engineer, work, software engineer, professional, backend, development, problem-solver">
+  <meta property="og:title" content="Aisa Lamdag">
   <meta name="author" content="Aisa Lamdag">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Professional Portfolio</title>
