--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <iframe src="https://lottie.host/embed/d71a7e63-6151-431d-85af-ab94291e05c5/BiGDogeOQI.json"></iframe>
           <div class="px-md-5 px-3 mb-5 pb-md-4">
             <p class="fs-1 f-montserrat-bold">I'm Sai.</p>
-            <p class="fs-4 f-montserrat mb-md-5">I'm a <mark>software engineer</mark> specializing in <span class="c-underline">backend development</span>.</p>
+            <p class="fs-4 f-montserrat mb-md-5">I'm an experienced and versatile <mark>software engineer</mark> specializing in <span class="c-underline">backend</span>, skilled in full-stack development, building robust APIs, optimizing performance, and delivering high-quality end-to-end solutions.</p>
             <a href="mailto:aisa.lamdag@gmail.com" class="btn intro-icn-link" target="_blank" title="Email">
               <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-envelope-at-fill" viewBox="0 0 16 16">
                 <path d="M2 2A2 2 0 0 0 .05 3.555L8 8.414l7.95-4.859A2 2 0 0 0 14 2zm-2 9.8V4.698l5.803 3.546zm6.761-2.97-6.57 4.026A2 2 0 0 0 2 14h6.256A4.5 4.5 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586zM16 9.671V4.697l-5.803 3.546.338.208A4.5 4.5 0 0 1 12.5 8c1.414 0 2.675.652 3.5 1.671"/>
@@ -84,7 +84,7 @@
             </a>
           </div>
         </div>
-        <div class="col align-self-end">
+        <div class="col my-auto">
           <div class="d-flex align-items-center justify-content-center">
             <img src="assets/1x1.webp" alt="1x1" class="rounded-4 photo-1x1 mt-4">
           </div>
@@ -463,6 +463,35 @@
         </div>
       </div>
   </section>
+  <!-- CERTIFICATES -->
+  <!-- <section class="container-fluid bg-body-tertiary" id="certificates">
+    <div class="container">
+      <h1 class="f-montserrat-bold py-md-5 py-4">Certificates<a class="anchor-link fw-lighter" href="#projects">#</a></h1>
+    </div>
+  </section> -->
+  <!-- <section class="container-fluid menu-content">
+    <div class="f-montserrat-bold prj-giga-text r-0">My Certifications.</div>
+      <div class="container cert-container">
+        <div class="row mb-md-3">
+          <div class="col-md-4"> 
+            <a href="https://www.testdome.com/certificates/cb77d57cd6744ea58f58825398686b14" class="testdome-certificate-stamp silver mx-auto">
+              <span class="testdome-certificate-name">Aisa Lamdag</span>
+              <span class="testdome-certificate-test-name">Attention to Detail and Time Management</span>
+              <span class="testdome-certificate-card-logo">TestDome<br>Certificate</span>
+            </a>
+            <script>
+                var stylesheet = "https://www.testdome.com/content/certificates/embed.css";
+                link = document.createElement("link");
+                link.href = stylesheet;
+                link.type = "text/css";
+                link.rel = "stylesheet";
+                link.media = "screen,print";
+                document.getElementsByTagName("head")[0].appendChild(link);
+            </script>
+          </div>
+        </div>
+      </div>
+  </section> -->
     
   <div class="container-fluid bg-body-tertiary">
     <footer class="container">
